@@ -1,5 +1,5 @@
 .\" Manpage for bfdd-beacon.
-.TH "bfdd-beacon" "8" "October 7, 2010" "OpenBFDD v0.2.1" "OpenBFDD v0.2.1" 
+.TH "bfdd-beacon" "8" "October 18, 2010" "OpenBFDD v0.3.0" "OpenBFDD v0.3.0" 
 .SH NAME
 \fBbfdd-beacon\fR - a Bidirectional Forwarding Detection (BFD) beacon daemon.
 .SH SYNOPSIS
