@@ -1,5 +1,5 @@
 .\" Manpage for bfdd-control.
-.TH "bfdd-control" "8" "October 7, 2010" "OpenBFDD v0.2.1" "OpenBFDD v0.2.1" 
+.TH "bfdd-control" "8" "October 18, 2010" "OpenBFDD v0.3.0" "OpenBFDD v0.3.0" 
 .SH NAME
 \fBbfdd-control\fR - control utility for \fBbfdd-beacon\fR(8)
 .SH SYNOPSIS
